--- a/src/index.css
+++ b/src/index.css
@@ -1076,3 +1076,10 @@ p {
 .rte > p:last-child {
   margin-bottom: 0;
 }
+
+.list-group-item {
+  background-color: transparent!important;
+  border: none!important;
+  padding: 0!important;
+  }
+
