--- a/src/index.css
+++ b/src/index.css
@@ -911,3 +911,39 @@ p {
     margin: 320px 20px;
   }
 }
+
+/* ---------- hero video text ---------- */
+
+.hero_title {
+  display: block;
+  margin-bottom: 0;
+  font-size: 40px;
+}
+
+@media only screen and (min-width: 590px) {
+  .hero_title {
+    font-size: 80px;
+  }
+}
+
+.hero_title {
+  font-size: 20px;
+}
+
+@media only screen and (min-width: 769px) {
+  .hero_title {
+    font-size: 40px;
+  }
+}
+
+.hero_subtitle {
+  font-weight: 400 !important;
+  font-family: sans-serif !important;
+  color: var(--colorKrhnPrimary);
+}
+
+@media only screen and (min-width: 590px) {
+  .hero_subtitle {
+    font-size: calc(16px * 1.18) !important;
+  }
+}
