--- a/src/index.css
+++ b/src/index.css
@@ -1039,45 +1039,31 @@ h2 {
 
 /* ========= SSS sections kodları  ========= */
 
-#accordion {
-  margin: 100px auto;
-  padding-left: 0;
-  max-width: 900px;
+.accordion-header{
+  margin-bottom: 0;
 }
 
-#accordion li {
-  list-style: none;
+.krhn-accordion{
+  margin: 100px auto;
+  max-width: 50rem;
+}
+
+.krhn-accordion .accordion-item{
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background: var(--colorKrhnSecondary);
   padding: 10px;
-  border-radius: 4px;
+  border-radius: 4px!important;
 }
 
-#accordion li img {
-  padding: 10px;
-  display: inline;
-  align-items: start;
-  max-height: 80px;
-  background-color: none !important;
+.krhn-accordion .accordion-item img{
+  max-width: 12%!important;
+  height: auto;
+  margin-right: 10px;
 }
 
-#accordion li label {
-  padding: 10px;
-  cursor: pointer;
-  /* ========= buraya sonradan renk ekleyebilirsin ========= */
-}
-
-#accordion li label h2 {
-  margin-bottom: 0 !important;
-}
-
-#accordion li svg {
-  height: 10px;
-  color: var(--colorKrhnPrimary);
-  /* padding-right: 20px; */
-}
-
-#accordion label + input[type="radio"] {
-  /* display: none; */
+.krhn-accordion .container-item_header h2{
+  margin-left: 2rem;
+  margin-bottom: 0;
+  font-family: var(--templateSummary);
 }
