--- a/src/index.css
+++ b/src/index.css
@@ -977,18 +977,6 @@ h2 {
   }
 }
 
-/* --------- brand center ----------- */
-
-.krhn-brand_center {
-  padding-right: 17rem;
-}
-
-@media only screen and (max-width: 767px) {
-  .krhn-brand_center {
-    padding-right: 3.5rem;
-  }
-}
-
 /* ----------- template kodları ----------- */
 
 .krhn-template_container {
@@ -1097,7 +1085,7 @@ h2 {
   position: relative;
   justify-content: flex-end;
   margin-right: 0.5rem;
-  z-index: 1; 
+  z-index: 1;
   bottom: 20px;
 }
 /*  arrow kapsayan div etiketi end */
@@ -1112,18 +1100,16 @@ h2 {
   z-index: 0;
   top: 10px;
   padding-right: 25px;
-  
 }
 /* başlığı arrow ile çakışmasına engel olmak için end */
 
 /* Başlık yazısının font ayarlaması */
-.krhn-baslik_ortala h2{
-  font-family: var(--templateHeader)!important ;
+.krhn-baslik_ortala h2 {
+  font-family: var(--templateHeader) !important ;
   font-size: 24px;
-  font-weight: 100!important;
+  font-weight: 100 !important;
 }
 /* Başlık yazısının font ayarlaması end */
-
 
 .krhn-accordion button[aria-expanded="true"] div[id="krhn-arrow"] svg {
   rotate: -180deg;
@@ -1131,11 +1117,9 @@ h2 {
 
 /* ========= SSS SECTİONS KODLARI end  ========= */
 
-
 /* ========= CONTACT ME  ========= */
 
-
-.krhn-contact_me{
+.krhn-contact_me {
   background: var(--colorKrhnSecondary);
   padding: 10px;
   border-radius: 14px;
@@ -1144,34 +1128,25 @@ h2 {
   transition: 0.5s;
 }
 
-.krhn-contact_me:hover{
+.krhn-contact_me:hover {
   background: var(--colorKrhnblack);
 }
 
-.krhn-contact_me .krhn-contact_link{
+.krhn-contact_me .krhn-contact_link {
   font-family: var(--templateHeader);
-  color: #fff!important;
+  color: #fff !important;
   transition: 0.5s;
 }
 
-.krhn-contact_me .krhn-contact_link:hover{
-  color:var(--colorKrhnPrimary)!important;
+.krhn-contact_me .krhn-contact_link:hover {
+  color: var(--colorKrhnPrimary) !important;
 }
-
-
-
-
-
-
-
-
-
 
 /* ========= CONTACT ME end  ========= */
 
 /* ========= MAİN CONTENT SECTİON HERO ========= */
 
-.krhn-main_header-text{
+.krhn-main_header-text {
   font-family: var(--templateHeader);
   color: var(--colorKrhnPrimary) !important;
   font-weight: 700 !important;
@@ -1180,3 +1155,16 @@ h2 {
 }
 
 /* ========= MAİN CONTENT SECTİON HERO end ========= */
+
+/* ========= HEADER İSSUE ========= */
+
+.krhn-header_text-mod-div {
+  width: 300px;
+  height: 43px;
+}
+
+.krhn-header_button-mod-div {
+  border: none !important;
+}
+
+/* ========= HEADER İSSUE end========= */
